--- a/src/descriptive_statistics.ipynb
+++ b/src/descriptive_statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "baf65416-aed8-4c77-b80f-8ca721579b89",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ba57eb65-14f3-4646-800f-c508d6fda16e",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "1           count  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0b0ac06e-7791-4c39-b94b-4f79d8870fa0",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "64f9c803-ad68-420a-b42a-1c94bef3b5e2",
    "metadata": {},
    "outputs": [],
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2eef19bf-e405-4efa-8a31-b2dea4eac022",
+   "execution_count": 8,
+   "id": "ab2f1a65-a179-4f80-ad10-a9dfccc44fb0",
    "metadata": {},
    "outputs": [
     {
@@ -699,14 +699,14 @@
     " {feature},\n",
     " COUNT({feature}) AS frequency\n",
     "FROM (SELECT {feature}\n",
-    "       FROM {table})\n",
+    "       FROM {table}) AS t\n",
     "GROUP BY {feature}\n",
     "ORDER BY frequency DESC\n",
     "\"\"\"\n",
     "\n",
     "tables = ['flights', 'flights_test', 'fuel_comsumption', 'passengers']\n",
     "\n",
-    "for table in tables[:1]:\n",
+    "for table in tables[3:]:\n",
     "    frames = []\n",
     "    with postgresql_connection() as con:\n",
     "        for feat in cat_features[cat_features[table].notnull()][table]:\n",
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "51c96c66-f7bb-4bf6-b9f4-769d15b7fe49",
    "metadata": {
     "tags": []
@@ -742,7 +742,7 @@
     "               'variance', 'range', 'minimum', 'Q1/25%', 'median/Q2/50%',\n",
     "               'Q3/75%', 'maximum', 'interquartile_range (IQR)', 'skewness']\n",
     "\n",
-    "for table in tables[:1]:\n",
+    "for table in tables[3:]:\n",
     "    frames = []\n",
     "    stats = pd.DataFrame().index = stats_index\n",
     "    for feat in cat_features[cat_features[table].notnull()][table]:\n",
@@ -756,8 +756,7 @@
     "               .rename(columns={'frequency' : feat})\n",
     "               .T)\n",
     "        \n",
-    "        dfs.insert(loc=3, column='unbiased_var', value=df['frequency'].var())\n",
-    "        dfs['unbiased_skew'] = df['frequency'].skew()\n",
+    "        dfs.insert(loc=3, column='variance', value=df['frequency'].var())\n",
     "        \n",
     "        frames.append(dfs)\n",
     "    \n",
@@ -767,8 +766,10 @@
     "    stats['interquartile_range (IQR)'] = stats['75%'] - stats['25%']\n",
     "    stats['skewness'] = (3 * (stats['mean'] - stats['50%'])\n",
     "                         / stats['std'])\n",
+    "    stats = stats.T\n",
+    "    stats.index = stats_index\n",
     "    \n",
-    "    stats.T.to_csv(f'../data/descriptive_stats/{table}_cat_freq_stats.csv')"
+    "    stats.to_csv(f'../data/descriptive_stats/{table}_cat_freq_stats.csv')"
    ]
   },
   {
@@ -799,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "a846ec93-1d6c-41f0-93ef-66ba65a69836",
    "metadata": {},
    "outputs": [],
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "d166b036-6f3f-4f15-83bb-0b51c5a2ac2f",
    "metadata": {},
    "outputs": [],
@@ -829,10 +830,6 @@
    "execution_count": 12,
    "id": "ae71d319-42b9-4a0d-8460-3a771627bc85",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1217,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "8736719f-07ff-4faa-9a05-b089c3f5f0ca",
    "metadata": {},
    "outputs": [
@@ -1225,8 +1222,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected\n",
-      "Connected\n",
       "Connected\n"
      ]
     }
@@ -1250,49 +1245,71 @@
     "         FROM {table}) AS t;\n",
     "\"\"\"\n",
     "\n",
-    "tables = ['flights', 'flights_test', 'fuel_comsumption', 'passengers']\n",
-    "\n",
     "stats_index = ['null_count', 'count', 'mean', 'standard_deviation', \n",
     "               'variance', 'range', 'minimum', 'Q1/25%', 'median/Q2/50%',\n",
     "               'Q3/75%', 'maximum', 'interquartile_range (IQR)', 'skewness']\n",
     "\n",
-    "for table in tables[1:]:\n",
+    "tables = ['flights', 'flights_test', 'fuel_comsumption', 'passengers']\n",
+    "# For each table in database\n",
+    "for table in tables[:1]:  # [:1] is just 'flights'\n",
+    "    # List to store dataframe results for each feature\n",
     "    frames = []\n",
-    "    stats = pd.DataFrame().index = stats_index\n",
+    "    \n",
+    "    # Create PostgreSQL connection\n",
     "    with postgresql_connection() as con:\n",
+    "        # For each feature in the numeric features\n",
     "        for feat in num_features[num_features[table].notnull()][table]:\n",
     "            # SQL composition\n",
     "            query = sql.SQL(numerical_statistics_sql).format(\n",
     "                feature=sql.Identifier(feat),\n",
     "                table=sql.Identifier(table)\n",
     "            ).as_string(context=con)\n",
-    "\n",
-    "            df = execute_sql_statement(con, query=query)\n",
-    "\n",
-    "            df.index = [feat]\n",
     "            \n",
-    "            # Expand quartiles\n",
-    "            df.insert(loc=6, column='q1', value=df['q1,q2,q3'][0][0])\n",
-    "            df.insert(loc=7, column='median', value=df['q1,q2,q3'][0][1])\n",
-    "            df.insert(loc=8, column='q3', value=df['q1,q2,q3'][0][2])\n",
-    "            df = df.drop('q1,q2,q3', axis=1)\n",
-    "            df.insert(loc=5, column='range', value=(df['max'] - df['min']))\n",
-    "            df['interquartile_range (IQR)'] = df['q3'] - df['q1']\n",
-    "            df['skewness'] = (3 * (df['mean'].astype(float) \n",
-    "                                   - df['median'].astype(float))\n",
-    "                              / df['standard_deviation'].astype(float))\n",
-    "\n",
-    "            frames.append(df.T[feat])\n",
+    "            # Get query results in a dataframe\n",
+    "            # 1 row representing the feature\n",
+    "            # 8 columns for the descriptive statistics\n",
+    "            df = execute_sql_statement(con, query=query)\n",
+    "            \n",
+    "            # Set the index name to the feature\n",
+    "            df.index = [feat]\n",
+    "            df.to_csv(f'../data/descriptive_stats/backup/')\n",
+    "            # Append dataframe to list\n",
+    "            frames.append(df)\n",
     "    \n",
-    "    stats = pd.concat(frames, axis=1)\n",
-    "\n",
-    "    stats.to_csv(f'../data/descriptive_stats/{table}_numeric_stats.csv')"
+    "    # Concatenate on the rows\n",
+    "    stats = pd.concat(frames, axis=0)\n",
+    "    \n",
+    "    # Add additional statistics\n",
+    "    # Set the quartiles to their own columns\n",
+    "    stats.insert(loc=6, column='q1', value=stats['q1,q2,q3'][0][0])\n",
+    "    stats.insert(loc=7, column='median', value=stats['q1,q2,q3'][0][1])\n",
+    "    stats.insert(loc=8, column='q3', value=stats['q1,q2,q3'][0][2])\n",
+    "    stats = stats.drop('q1,q2,q3', axis=1)\n",
+    "    # Add range\n",
+    "    stats.insert(loc=5, column='range', value=(stats['max'] - stats['min']))\n",
+    "    # Add IQR\n",
+    "    stats['interquartile_range (IQR)'] = stats['q3'] - stats['q1']\n",
+    "    # Add skewness\n",
+    "    stats['skewness'] = (3 * (stats['mean'].astype(float) \n",
+    "                           - stats['median'].astype(float))\n",
+    "                      / stats['standard_deviation'].astype(float))\n",
+    "    \n",
+    "    # Transpose dataframe\n",
+    "    # Rows are the desriptive statistics\n",
+    "    # Columns are the features\n",
+    "    stats = stats.T\n",
+    "    \n",
+    "    # Reset the index\n",
+    "    stats.index = stats_index\n",
+    "    \n",
+    "    # Write to csv\n",
+    "    stats.to_csv(f'../data/descriptive_stats/{table}_numeric_stats_TEST.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8043a550-025c-4398-af74-59cbed1a782e",
+   "id": "55eac4ba-32f1-4da6-818c-b5dbfba5ba33",
    "metadata": {},
    "outputs": [],
    "source": []
