--- a/src/descriptive_statistics.ipynb
+++ b/src/descriptive_statistics.ipynb
@@ -240,6 +240,7 @@
    "cell_type": "markdown",
    "id": "03240d11-2289-489a-be0c-28378cf0a7db",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1258,7 +1259,7 @@
     "    # Create PostgreSQL connection\n",
     "    with postgresql_connection() as con:\n",
     "        # For each feature in the numeric features\n",
-    "        for feat in num_features[num_features[table].notnull()][table]:\n",
+    "        for feat in num_features[num_features[table].notnull()][table][:8]:\n",
     "            # SQL composition\n",
     "            query = sql.SQL(numerical_statistics_sql).format(\n",
     "                feature=sql.Identifier(feat),\n",
