--- a/src/descriptive_statistics.ipynb
+++ b/src/descriptive_statistics.ipynb
@@ -90,14 +90,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2f15f819-aced-48ec-9179-cc2cd2534db3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "ba57eb65-14f3-4646-800f-c508d6fda16e",
    "metadata": {},
@@ -1273,7 +1265,7 @@
     "            \n",
     "            # Set the index name to the feature\n",
     "            df.index = [feat]\n",
-    "            df.to_csv(f'../data/descriptive_stats/backup/')\n",
+    "            df.to_csv(f'../data/descriptive_stats/backup/{feat}.csv')\n",
     "            # Append dataframe to list\n",
     "            frames.append(df)\n",
     "    \n",
@@ -1306,14 +1298,6 @@
     "    # Write to csv\n",
     "    stats.to_csv(f'../data/descriptive_stats/{table}_numeric_stats_TEST.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55eac4ba-32f1-4da6-818c-b5dbfba5ba33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
