--- a/src/descriptive_statistics.ipynb
+++ b/src/descriptive_statistics.ipynb
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "8736719f-07ff-4faa-9a05-b089c3f5f0ca",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1235,8 @@
     "    WITHIN GROUP (ORDER BY {feature}::NUMERIC) AS \"q1,q2,q3\",\n",
     "  MAX({feature}::NUMERIC) AS max\n",
     "   FROM (SELECT {feature}\n",
-    "         FROM {table}) AS t;\n",
+    "         FROM {table}\n",
+    "         LIMIT 10) AS t;\n",
     "\"\"\"\n",
     "\n",
     "stats_index = ['null_count', 'count', 'mean', 'standard_deviation', \n",
@@ -1296,8 +1297,16 @@
     "    stats.index = stats_index\n",
     "    \n",
     "    # Write to csv\n",
-    "    stats.to_csv(f'../data/descriptive_stats/{table}_numeric_stats_TEST.csv')"
+    "    stats.to_csv(f'../data/descriptive_stats/{table}_numeric_stats.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feb8ed6d-1bf0-4b35-b703-b7df4fe86418",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
