--- a/src/DecisionTree.ipynb
+++ b/src/DecisionTree.ipynb
@@ -35,8 +35,7 @@
     "\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "\n",
     "def split_data(X, y, test_size=0.2, random_state=99):\n",
@@ -45,14 +44,11 @@
     "    \n",
     "    return X_train, X_test, y_train, y_test\n",
     "\n",
-    "def random_forest(X_train, X_test, y_train, y_test, random_state=99):\n",
-    "    random_forest = RandomForestClassifier(random_state=random_state)\n",
-    "    random_forest.fit(X_train, y_train)\n",
-    "    y_pred = random_forest.predict(X_test)\n",
-    "    col_names = X_train.columns.tolist()\n",
-    "    feature_scores = pd.Series(random_forest.feature_importances_, index=[col_names]).sort_values(ascending=False)\n",
-    "    print(feature_scores)\n",
-    "    print('Model accuracy score: {0:0.4f}'. format(accuracy_score(y_test, y_pred)))\n",
+    "def decision_tree(X_train, X_test, y_train, y_test, random_state=99):\n",
+    "    dec_tree = DecisionTreeRegressor(random_state=random_state)\n",
+    "    dec_tree.fit(X_train, y_train)\n",
+    "    y_pred = dec_tree.predict(X_test)\n",
+    "    print('Mean Squared Error: {0:0.4f}'. format(mean_squared_error(y_test, y_pred)))\n",
     "\n"
    ]
   },
@@ -65,17 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "crs_arr_time    0.561826\n",
-      "crs_dep_time    0.438174\n",
-      "dtype: float64\n",
-      "Model accuracy score: 0.0292\n"
+      "Mean Squared Error: 4309.7736\n"
      ]
     }
    ],
@@ -89,7 +82,7 @@
     "y = test.arr_delay\n",
     "\n",
     "X_train, X_test, y_train, y_test = split_data(X, y)\n",
-    "random_forest(X_train, X_test, y_train, y_test)"
+    "decision_tree(X_train, X_test, y_train, y_test)"
    ]
   },
   {
@@ -97,7 +90,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Of course this is"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +489,7 @@
        "[6012 rows x 32 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
