--- a/src/descriptive_statistics.ipynb
+++ b/src/descriptive_statistics.ipynb
@@ -42,9 +42,6 @@
    "execution_count": 20,
    "id": "7d7dc4b8-d31f-48f0-99ce-4bba9ba1f267",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -224,8 +221,7 @@
     }
    ],
    "source": [
-    "schema_df = pd.read_csv('../data/table_data_types.csv')\n",
-    "schema_df.head(2)"
+    "schema_df = pd.read_csv('../data/table_data_types.csv')"
    ]
   },
   {
@@ -776,7 +772,9 @@
   {
    "cell_type": "markdown",
    "id": "6a886b83-5116-45a2-86f5-d1f0152870f3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Numeric"
    ]
@@ -784,31 +782,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1b85c32b-8756-43f2-a2bd-a27d94012197",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_features = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a846ec93-1d6c-41f0-93ef-66ba65a69836",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tables = ['flights', 'flights_test', 'fuel_comsumption', 'passengers']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "d166b036-6f3f-4f15-83bb-0b51c5a2ac2f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "tables = ['flights', 'flights_test', 'fuel_comsumption', 'passengers']\n",
+    "\n",
     "frames = []\n",
+    "num_features = pd.DataFrame()\n",
     "for table in tables:\n",
     "    frames.append(schema_df[\n",
     "        (schema_df[f'{table}_is_categorical'] == 0)\n",
@@ -1198,16 +1179,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c1d67d31-f0fe-44d6-b117-768f0b310a5b",
-   "metadata": {},
-   "source": [
-    "# count, mean, standard deviation, variance, range, minimum, Q1/25%, median/Q2/50%, Q3/75%, maximum, interquartile range (IQR), skewness"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "8736719f-07ff-4faa-9a05-b089c3f5f0ca",
    "metadata": {},
    "outputs": [
@@ -1235,8 +1208,7 @@
     "    WITHIN GROUP (ORDER BY {feature}::NUMERIC) AS \"q1,q2,q3\",\n",
     "  MAX({feature}::NUMERIC) AS max\n",
     "   FROM (SELECT {feature}\n",
-    "         FROM {table}\n",
-    "         LIMIT 10) AS t;\n",
+    "         FROM {table}) AS t;\n",
     "\"\"\"\n",
     "\n",
     "stats_index = ['null_count', 'count', 'mean', 'standard_deviation', \n",
@@ -1245,14 +1217,14 @@
     "\n",
     "tables = ['flights', 'flights_test', 'fuel_comsumption', 'passengers']\n",
     "# For each table in database\n",
-    "for table in tables[:1]:  # [:1] is just 'flights'\n",
+    "for table in tables[1:2]:\n",
     "    # List to store dataframe results for each feature\n",
     "    frames = []\n",
     "    \n",
     "    # Create PostgreSQL connection\n",
     "    with postgresql_connection() as con:\n",
     "        # For each feature in the numeric features\n",
-    "        for feat in num_features[num_features[table].notnull()][table][:8]:\n",
+    "        for feat in num_features[num_features[table].notnull()][table]:\n",
     "            # SQL composition\n",
     "            query = sql.SQL(numerical_statistics_sql).format(\n",
     "                feature=sql.Identifier(feat),\n",
@@ -1299,14 +1271,6 @@
     "    # Write to csv\n",
     "    stats.to_csv(f'../data/descriptive_stats/{table}_numeric_stats.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "feb8ed6d-1bf0-4b35-b703-b7df4fe86418",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
